Add JDK 25+ native access support
Starting with JDK 25, the JVM warns when native libraries are loaded
without explicit native access enabled. This change:

- Adds Enable-Native-Access manifest attribute to the JAR for future
  JDK compatibility when native access is denied by default
- Documents the --enable-native-access=ALL-UNNAMED flag in README

Fixes #508

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>