@@ -184,6 +184,18 @@ ACCP has the following requirements:
 * JDK8 or newer (This includes both OracleJDK and [Amazon Corretto](https://aws.amazon.com/corretto/))
 * Linux (x86-64 or arm64) or MacOs running on x86_64 (also known as x64 or AMD64)
 
+## JDK 25+ Native Access
+Starting with JDK 25, the JVM warns when native libraries are loaded without explicit native access enabled.
+To suppress these warnings when using ACCP, add the following JVM argument:
+```
+--enable-native-access=ALL-UNNAMED
+```
+For example:
+```bash
+java --enable-native-access=ALL-UNNAMED -cp your-app.jar:AmazonCorrettoCryptoProvider.jar com.example.Main
+```
+This flag will become required in a future JDK release when native access is denied by default.
+
 ACCP comes bundled with AWS-LC's `libcrypto.so`, so it is not necessary to install AWS-LC on the host or container where you run your application.
 
 If ACCP is used/installed on a system it does not support, it will disable itself and the JVM will behave as if ACCP weren't installed at all.
